--- a/arch/arm64/boot/Makefile
+++ b/arch/arm64/boot/Makefile
@@ -73,6 +73,12 @@ $(obj)/Image.gz-dtb: $(obj)/Image.gz $(DTB_OBJS) FORCE
 $(obj)/dtbo.img: $(DTBO_OBJS) FORCE
 	$(call if_changed,mkdtimg,4096) # align dtbo.img to 4kB
 
+$(obj)/dtb.img: $(DTB_OBJS) FORCE
+	$(call if_changed,cat)
+
+$(obj)/dtb.img: $(DTB_OBJS) FORCE
+	$(call if_changed,cat)
+
 install:
 	$(CONFIG_SHELL) $(srctree)/$(src)/install.sh $(KERNELRELEASE) \
 	$(obj)/Image System.map "$(INSTALL_PATH)"
