--- a/techpack/data/drivers/rmnet/perf/Kconfig
+++ b/techpack/data/drivers/rmnet/perf/Kconfig
@@ -4,7 +4,7 @@
 
 config RMNET_PERF
 	tristate "Rmnet Perf driver"
-	default m
+	default n
 	depends on RMNET
 	---help---
 	  performance mode of rmnet driver
