--- a/techpack/data/drivers/rmnet/shs/Kconfig
+++ b/techpack/data/drivers/rmnet/shs/Kconfig
@@ -4,7 +4,7 @@
 
 config RMNET_SHS
 	tristate "Rmnet SHS driver"
-	default m
+	default n
 	depends on RMNET
 	---help---
 	  performance mode of rmnet driver
